# toy-model-deployment

./: .env  README.md  collection.py  config.py  logging_test.py  main.py  model.ipynb  model.py  model_service.py  preparation.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint.yml  workflow.yml
.github/workflows/actions/build-application/: action.yml
src/: main.py
src/config/: .env  __init__.py  logger.py  model.py
src/model/: model_service.py
src/model/pipeline/: collection.py  model.py  preparation.py
