[tool.poetry]
name = "toy-model"
version = "0.1.0"
description = ""
authors = ["Stefania Syrsiri <stefsyrsiri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asttokens = "^2.4.1"
build = "^1.2.2"
cachecontrol = "^0.14.0"
certifi = "^2024.8.30"
charset-normalizer = "^3.3.2"
cleo = "^2.1.0"
colorama = "^0.4.6"
comm = "^0.2.2"
crashtest = "^0.4.1"
debugpy = "^1.8.5"
decorator = "^5.1.1"
distlib = "^0.3.8"
dulwich = "^0.22.1"
executing = "^2.1.0"
fastjsonschema = "^2.20.0"
filelock = "^3.16.0"
idna = "^3.8"
installer = "^0.7.0"
ipykernel = "^6.29.5"
ipython = "^8.27.0"
jaraco-classes = "^3.4.0"
jedi = "^0.19.1"
joblib = "^1.4.2"
jupyter-client = "^8.6.2"
jupyter-core = "^5.7.2"
keyring = "^25.3.0"
matplotlib-inline = "^0.1.7"
more-itertools = "^10.5.0"
msgpack = "^1.1.0"
nest-asyncio = "^1.6.0"
numpy = "^2.1.1"
packaging = "^24.1"
pandas = "^2.2.2"
parso = "^0.8.4"
pexpect = "^4.9.0"
pkginfo = "^1.11.1"
platformdirs = "^4.3.2"
poetry-core = "^1.9.0"
prompt-toolkit = "^3.0.47"
psutil = "^6.0.0"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.3"
pygments = "^2.18.0"
pyproject-hooks = "^1.1.0"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.1"
pywin32 = "^306"
pywin32-ctypes = "^0.2.3"
pyzmq = "^26.2.0"
rapidfuzz = "^3.9.7"
requests = "^2.32.3"
requests-toolbelt = "^1.0.0"
scikit-learn = "^1.5.1"
scipy = "^1.14.1"
shellingham = "^1.5.4"
six = "^1.16.0"
stack-data = "^0.6.3"
threadpoolctl = "^3.5.0"
tomlkit = "^0.13.2"
tornado = "^6.4.1"
traitlets = "^5.14.3"
trove-classifiers = "^2024.7.2"
tzdata = "^2024.1"
urllib3 = "^2.2.2"
virtualenv = "^20.26.4"
wcwidth = "^0.2.13"
pydantic-settings = "^2.4.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
